--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "theme_color": "#003366",
   "icons": [
     {
-      "src": "det.png",
+      "src": "icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
